= 3.6.4.1
- Actually fix country_select bridge for latest gem version

= 3.6.4
- Fix country_select bridge for latest gem version

= 3.6.3
- Fix search on nested or embedded lists with rails_ujs
- Fix inplace edit when collection action link opens a view with table and th

= 3.6.2
- Fix count query when association's primary key is string
- Fix unauthorized_columns and constraint_columns with threadsafe enabled
- Fix changing list.sorting and column.sort_by per request when threadsafe is enabled

= 3.6.1
- Display group cols vertically when subform layout is vertical
- Fix html attributes for input datetime on field search, when jquery ui is not used
- Fix constraint columns for nested list on through assocaitions
- Support rails 6.1

= 3.6.0
- Fix i18n at ruby 3.0.0
- Add list helper for bitfield column, so it display labels of selected checkboxes in list
- Support rails 6.0

= 3.6.0.rc2
- Fix subform crud in subform subgroup when controller is embedded
- Fix sorting for mongoid models, broken in 3.6.0.rc1
- Improve add_new option, allow to change subform columns (with helper override calling super and add columns to locals argument)
- Support add_new option for record_select or radio form_ui
- Support add_new option for polymorphic associations (add_new may be array with class names to allow add new, or true to allow add new for any model)
- Support description for columns displayed as subform
- Don't mess with history if current page is not using activescaffold when is loaded
- Fix changing sort_by per request when threadsafe is enabled

= 3.6.0.rc1
- Cleanup: deprecate ActiveScaffold.set_defaults for ActiveScaffold.defaults, rename some setters
- Fix adding new action links on request with threadsafety enabled
- Fix iterating in config.columns with threadsafety enabled
- Fix changing pagination enabled/disabled with threadsafety enabled
- Allow create action in has_many through singular association